[metadata]
name = autoinject_pymitter
version = 1.0.0
author = Erin Turnbull
author_email = erin.a.turnbull@gmail.com
description = ADI integration for pymitter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/turnbullerin/autoinject_pymitter
project_urls =
    Bug Tracker = https://github.com/turnbullerin/autoinject_pymitter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    autoinject
    pymitter>=0.3.0

[options.packages.find]
where = src